WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285336
[GStreamer] Video frame metadata handling fixes
https://bugs.webkit.org/show_bug.cgi?id=285336
Summary
[GStreamer] Video frame metadata handling fixes
Philippe Normand
Reported
2025-01-03 03:57:32 PST
,
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-01-03 04:02:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38494
EWS
Comment 2
2025-01-09 06:39:49 PST
Committed
288658@main
(c015a4a405d1): <
https://commits.webkit.org/288658@main
> Reviewed commits have been landed. Closing PR #38494 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-09 06:40:18 PST
<
rdar://problem/142615980
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug