Cherry-pick 288658@main (c015a4a405d1). https://bugs.webkit.org/show_bug.cgi?id=285336

[GStreamer] Video frame metadata handling fixes
    https://bugs.webkit.org/show_bug.cgi?id=285336

    Reviewed by Xabier Rodriguez-Calvar.

    We now make sure buffers are writable before adding GstMeta on them and also if the buffers are
    stored within samples, make sure the samples are writable before updating them.

    These issues were detected when using getDisplayMedia with pipewire, the capturer sink was emitting
    these warnings: free_priv_data: object finalizing but still has 1 parents (object:0x7fc534018ca0).

    * Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
    (WebCore::VideoFrameGStreamer::createFromPixelBuffer):
    (WebCore::VideoFrameGStreamer::VideoFrameGStreamer):
    * Source/WebCore/platform/graphics/gstreamer/VideoFrameMetadataGStreamer.cpp:
    (webkitGstBufferSetVideoFrameTimeMetadata):
    * Source/WebCore/platform/graphics/gstreamer/VideoFrameMetadataGStreamer.h:
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerCapturer.cpp:
    (WebCore::GStreamerCapturer::createSource):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerIncomingTrackProcessor.cpp:
    (WebCore::GStreamerIncomingTrackProcessor::installRtpBufferPadProbe):
    * Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:

    Canonical link: https://commits.webkit.org/288658@main

Canonical link: https://commits.webkit.org/282416.421@2.46-jan-2025-multimedia